--- a/index.html
+++ b/index.html
@@ -9,5 +9,19 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
   <script src="script.js"></script>
+  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
+  <script src="particles-config.js"></script>  
+  <div id="particles-container"></div>
+<style>
+    body {
+      margin: 0;
+      overflow: hidden;
+    }
+    #particles-container {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
 </body>
 </html>
