particle.js index.html fixup!

--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <script src="script.js"></script>
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script src="particles-config.js"></script>  
-  <div id="particles-container"></div>
 <style>
     body {
       margin: 0;
@@ -23,5 +22,8 @@
       height: 100%;
     }
   </style>
+</body>
+<body>
+  <div id="particles-container"></div>
 </body>
 </html>
