--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
   <script src="script.js"></script>
+
   <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
   <script src="particles-config.js"></script>  
+
+    <a href="interests.html">Interests and Hobbies</a>
+
 <style>
     body {
       margin: 0;
