--- a/interests.html
+++ b/interests.html
@@ -18,46 +18,47 @@
     }
 
     .interests-container {
-      max-width: 600px;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      max-width: 800px;
+    }
+
+    .interest-card {
       background-color: #2c2c2c;
-      padding: 30px;
+      padding: 20px;
       border-radius: 10px;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-    }
-
-    h1 {
       text-align: center;
+      transition: transform 0.3s ease;
     }
 
-    .interest {
-      display: flex;
-      align-items: center;
-      margin-bottom: 20px;
+    .interest-card:hover {
+      transform: translateY(-5px);
     }
 
-    .interest .icon {
-      font-size: 24px;
-      margin-right: 10px;
+    .icon {
+      font-size: 40px;
+      margin-bottom: 10px;
       color: #ffffff;
     }
 
-    .interest .text {
-      font-size: 18px;
+    .text {
+      font-size: 20px;
     }
   </style>
 </head>
 <body>
   <div class="interests-container">
-    <h1>Interests</h1>
-    <div class="interest">
+    <div class="interest-card">
       <i class="fas fa-music icon"></i>
       <div class="text">Music</div>
     </div>
-    <div class="interest">
+    <div class="interest-card">
       <i class="fas fa-camera-retro icon"></i>
       <div class="text">Photography</div>
     </div>
-    <div class="interest">
+    <div class="interest-card">
       <i class="fas fa-globe-americas icon"></i>
       <div class="text">Travel</div>
     </div>
