interest: improve it!!

--- a/interests.html
+++ b/interests.html
@@ -11,10 +11,16 @@
       color: #ffffff;
       font-family: Arial, sans-serif;
       display: flex;
+      flex-direction: column;
       justify-content: center;
       align-items: center;
       height: 100vh;
       margin: 0;
+    }
+
+    h1 {
+      font-size: 36px;
+      margin-bottom: 20px;
     }
 
     .interests-container {
@@ -49,6 +55,8 @@
   </style>
 </head>
 <body>
+  <h1>My Interests</h1>
+
   <div class="interests-container">
     <div class="interest-card">
       <i class="fas fa-music icon"></i>
