website: hole rebase [wip]

--- a/index.html
+++ b/index.html
@@ -1,33 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Aarav Pandey</title>
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>It's me! Aarav</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1 id="name"></h1>
-
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.11/typed.min.js"></script>
-  <script src="script.js"></script>
-
-  <script src="https://cdn.jsdelivr.net/particles.js/2.0.0/particles.min.js"></script>
-  <script src="particles-config.js"></script>  
-
-    <a href="interests.html">Interests and Hobbies</a>
-
-<style>
-    body {
-      margin: 0;
-      overflow: hidden;
-    }
-    #particles-container {
-      position: absolute;
-      width: 100%;
-      height: 100%;
-    }
-  </style>
-</body>
-<body>
-  <div id="particles-container"></div>
+  <div class="card">
+    <h1>Welcome to My Website</h1>
+    <p>Hello there! I'm glad you stopped by. Explore my interests and hobbies to get to know me better.</p>
+    <a href="interests.html" class="btn">Explore Interests</a>
+  </div>
 </body>
 </html>
