--- a/interests.html
+++ b/interests.html
@@ -3,81 +3,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interests</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <style>
-    body {
-      background-color: #1a1a1a;
-      color: #ffffff;
-      font-family: Arial, sans-serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      height: 100vh;
-      margin: 0;
-    }
-
-    h1 {
-      font-size: 36px;
-      margin-bottom: 20px;
-    }
-
-    .interests-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 20px;
-      max-width: 800px;
-    }
-
-    .interest-card {
-      background-color: #2c2c2c;
-      padding: 20px;
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
-      text-align: center;
-      transition: transform 0.3s ease;
-    }
-
-    .interest-card:hover {
-      transform: translateY(-5px);
-    }
-
-    .icon {
-      font-size: 40px;
-      margin-bottom: 10px;
-      color: #ffffff;
-    }
-
-    .text {
-      font-size: 20px;
-    }
-
-    /* Mobile optimization */
-    @media (max-width: 768px) {
-      .interests-container {
-        grid-template-columns: 1fr;
-        gap: 10px;
-      }
-    }
-  </style>
+  <title>My Interests and Hobbies</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>My Interests</h1>
-
-  <div class="interests-container">
-    <div class="interest-card">
-      <i class="fas fa-music icon"></i>
-      <div class="text">Music</div>
-    </div>
-    <div class="interest-card">
-      <i class="fas fa-camera-retro icon"></i>
-      <div class="text">Photography</div>
-    </div>
-    <div class="interest-card">
-      <i class="fas fa-globe-americas icon"></i>
-      <div class="text">Travel</div>
-    </div>
-    <!-- Add more interests here -->
+  <div class="card">
+    <h1>My Interests and Hobbies</h1>
+    <ul>
+      <li>Photography</li>
+      <li>Music</li>
+      <li>Travelling</li>
+      <!-- Add more interests here -->
+    </ul>
   </div>
 </body>
 </html>
