re-init type.js

--- a/index.html
+++ b/index.html
@@ -13,4 +13,10 @@
     <a href="interests.html" class="btn">Explore Interests</a>
   </div>
 </body>
+<body>
+<p id="Im Aarav"></p>
+ <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css">
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
+  <script src="script.js"></script>
+</body>
 </html>
