website: nuke old ui & start from scratch
**dropped old ui
** revamp ui/ux

--- a/index.html
+++ b/index.html
@@ -1,22 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>It's me! Aarav</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Aarav Pandey</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@700&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e680c74734.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <div class="card">
-    <h1>Welcome to My Website</h1>
-    <p>Hello there! I'm glad you stopped by. Explore my interests and hobbies to get to know me better.</p>
-    <a href="interests.html" class="btn">Explore Interests</a>
-  </div>
+    <header>
+        <span class="white buttontop">
+            <a class="white link" href="https://github.com/omnitrix21">omnitrix21</a>
+        </span>
+    </header>
+
+    <div class="center">
+        <h1 class="white">Hey there, I'm
+            <span class="lilac"> Aarav Pandey </span>
+        </h1>
+        <h2 class="white">Just a random guy on Internet who loves to wate time :)</h2>
+    </div>
+    <footer>
+        <div class="white icons">
+            <a href="https://t.me/aarav_x"><i class="white link fa-2x fa-brands fa-telegram"></i></a>
+            <a href="https://github.com/omnitrix21"><i class="white link fa-2x fa-brands fa-github"></i></a>
+        </div>
+    </footer>
 </body>
-<body>
-<p id="Im Aarav"></p>
- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css">
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/typed.js/2.0.12/typed.min.js"></script>
-  <script src="script.js"></script>
-</body>
+
 </html>
