--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <h1 class="white">Hey there, I'm
             <span class="lilac"> Aarav Pandey </span>
         </h1>
-        <h2 class="white">Just a random guy on Internet who loves to wate time :)</h2>
+        <h2 class="white">Just a random guy on Internet who loves to waste time :)</h2>
     </div>
     <footer>
         <div class="white icons">
