--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <a href="https://github.com/omnitrix21"><i class="white link fa-2x fa-brands fa-github"></i></a>
         </div>
     </footer>
+<h1 class="white">Hey there, I'm <span class="lilac" id="typed-output"></span></h1>
 </body>
+
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
 
 </html>
