--- a/index.html
+++ b/index.html
@@ -21,19 +21,31 @@
     </header>
 
     <div class="center">
-    
-    <h1 class="white">Hey there, I'm <span class="lilac" id="typed-output"></span></h1>
- <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>   
-        <span class="lilac"> Aarav Pandey </span>
-        </h1>
-        <h2 class="white">Just a random guy on Internet who loves to waste time :)</h2>
+        <h1 class="white">Hey there, I'm <span class="lilac" id="typed-output"></span></h1>
+        <h2 class="white">Just a random guy on the Internet who loves to waste time :)</h2>
     </div>
+
     <footer>
         <div class="white icons">
             <a href="https://t.me/aarav_x"><i class="white link fa-2x fa-brands fa-telegram"></i></a>
             <a href="https://github.com/omnitrix21"><i class="white link fa-2x fa-brands fa-github"></i></a>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
+    <script>
+        document.addEventListener("DOMContentLoaded", function () {
+            var options = {
+                strings: ["Aarav Pandey"],
+                typeSpeed: 50,
+                backSpeed: 25,
+                loop: false,
+                showCursor: true,
+            };
+
+            var typed = new Typed("#typed-output", options);
+        });
+    </script>
 </body>
 
 </html>
